--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "react-jinke-music-player": "^4.16.3",
     "react-particles-js": "^3.3.0",
     "react-scripts": "3.4.1",
+    "serve": "^11.3.2",
     "tachyons": "^4.12.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "dev": "react-scripts start",
+  "start": "serve -s build",
+  "build": "react-scripts build",
+  "test": "react-scripts test --env=jsdom",
+  "eject": "react-scripts eject",
+  "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
